--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -4,15 +4,15 @@
 name: flake8 Lint
 
 # Controls when the workflow will run
-on:
-  '''
+on: [ push ]
+  /*
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ specific-branch ]
-  '''
-  [ push ]
-  pull_request:
-    branches: [ main ]
+  #push:
+  #  branches: [ specific-branch ]
+  
+  #pull_request:
+  #  branches: [ main ]
+  
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
