feat: change flake8 file content

--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -4,26 +4,23 @@
 name: flake8 Lint
 
 # Controls when the workflow will run
-on: [ push ]
-  /*
+on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  #push:
-  #  branches: [ specific-branch ]
-  
-  #pull_request:
-  #  branches: [ main ]
-  
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "Lint"
-  flake8-lint:
+  # This workflow contains a single job called "build"
+  build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest 
-    name: Lint
+    runs-on: ubuntu-latest
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
@@ -36,15 +33,10 @@ jobs:
         run: |
           echo Command 1
           echo Command 2
-      
       # Flake8 Lint steps    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # If an action is defined in a different repository than your workflow file, 
-      # you can reference the action with the {owner}/{repo}@{ref} syntax in your workflow file.
       - name: Check out source repository
         uses: actions/checkout@v2
 
-      # 
       - name: Set up Python environment
         uses: actions/setup-python@v2
         with:
