--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,32 +23,22 @@ jobs:
     name: Lint
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Checking coding styling
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Command 1
-          echo Command 2
-      
-      # Flake8 Lint steps    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # If an action is defined in a different repository than your workflow file, 
-      # you can reference the action with the {owner}/{repo}@{ref} syntax in your workflow file.
-      - name: Check out source repository
-        uses: actions/checkout@v2
-
-      # 
-      - name: Set up Python environment
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
         with:
           python-version: "3.8"
-      - name: flake8 Lint
-        uses: py-actions/flake8@v2
+      - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
           # ignore errors
           flake8 --ignore=F403, F401, E402 
 
