--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run flake8
         run: |
           # ignore errors
-          flake8 --ignore=E1,E23,W503 ejemplo/tests/
+          flake8 --ignore=E1,E23,W503 ejemplo/tests/unit/test_nombres.py
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
