feat: ignore more errors

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run flake8
         run: |
           # ignore errors
-          flake8 --ignore=E1,E23,W503 ejemplo/tests/unit/test_nombres.py
+          flake8 --ignore=E1,E23,W503, F403, F401, E402 ejemplo/tests/unit/test_nombres.py ejemplo/tests/integration/test_integracion.py
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -59,16 +59,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        # ignore errors
-        flake8 --ignore=F403, F401, E402 
+    
     - name: Test with pytest
       run: |
         pytest ejemplo/tests/unit/test_nombres.py -v
