--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -59,7 +59,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install pytest
+        if [ -f ejemplo/requirements.txt ]; then pip install -r ejemplo/requirements.txt; fi
     
     - name: Test with pytest
       run: |
